# PersonalCoach

./: .gitignore  README.md  agentic_coach.py  ai_analyst.py  api_server.py  check_data.py  cognitive_memory_engine.py  dashboard.py  data_processor.py  garmin_sync.py  garmin_ticket_login.py  google_calendar.py  llm_provider.py  migrate.py  personal_coach_mcp.py  pyproject.toml  test_mcp_tools.py  test_parser.py
.claude/: launch.json  settings.json
.github/workflows/: ci.yml
.streamlit/: config.toml
backend/: __init__.py  agentic_coach.py  api_server.py  claim_check.py  coach_intake.py  cognitive_memory_engine.py  data_processor.py  garmin_sync.py  garmin_ticket_login.py  google_calendar.py  langsmith_setup.py  llm_provider.py  personal_coach_mcp.py  run_verdicts.py  seed_models.py  trace_logger.py  treadmill_model.py
data/: 21757314766.fit
deprecated/: test_garmin_sync.py
docs/: CI.md  IMPROVEMENTS.md  PROJECT_GUIDE.md  PROJECT_GUIDE.zh.md  PROMPT_CHANGELOG.md  architecture.md  coach_brain_design.md  coach_chat_design.md  langsmith-setup.md  mcp_tools_design.md
migrations/: v2_cme_schema.py  v3_dedupe_topics.py  v4_link_episodes.py
scripts/: __init__.py  manual_mcp_smoke.py  migrate_garmin_token.py
scripts/migrations/: __init__.py  v3_dedupe_topics.py  v4_link_episodes.py
tests/: conftest.py  test_agentic_coach_basics.py  test_agentic_coach_chat_stream.py  test_agentic_coach_history_ts.py  test_api_server_behavior.py  test_claim_check.py  test_cme_coach_facts.py  test_cme_model_proposals.py  test_cme_models.py  test_cme_v2.py  test_cme_v2b.py  test_coaching_tips.py  test_daily_checkins.py  test_data_processor.py  test_endpoint_smoke.py  test_external_events.py  test_garmin_sync.py  test_google_calendar.py  test_langsmith_setup.py  test_llm_provider.py  test_personal_coach_mcp.py  test_planned_workouts.py  test_run_verdicts.py  test_seed_models_p6.py  test_seed_models_p6_batch2.py  test_trace_logger.py  test_treadmill_model.py
web/: next.config.ts  package-lock.json  package.json
web/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  page.tsx  providers.tsx
web/app/activity/: page.tsx
web/app/coach/: page.tsx
web/app/setup/: page.tsx
web/components/: bottom-nav.tsx  metric-card.tsx  page-header.tsx  sync-banner.tsx  today-eyebrow.tsx  training-selector.tsx
web/lib/: api.ts  coach-errors.ts  effort-colors.ts  format.ts  sso.ts  todays-read.ts  types.ts
webapp/: index.html
(+49 files in other folders)
