[project]
name = "personalcoach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.22.1",
    "altair==6.0.0",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==26.1.0",
    "blinker==1.9.0",
    "cachetools==7.0.5",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "cryptography==46.0.5",
    "distro==1.9.0",
    "filetype==1.2.0",
    "fastapi==0.121.0",
    "garminconnect==0.2.40",
    "garth==0.6.3",
    "gitdb==4.0.12",
    "gitpython==3.1.46",
    "google-auth==2.49.1",
    "google-genai==1.68.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "langchain-core==1.2.20",
    "langchain-google-genai==4.2.1",
    "langgraph==1.1.3",
    "langgraph-checkpoint==4.0.1",
    "langgraph-checkpoint-sqlite==3.0.3",
    "langgraph-prebuilt==1.0.8",
    "langgraph-sdk==0.3.12",
    "langsmith==0.7.22",
    "markupsafe==3.0.3",
    "narwhals==2.18.0",
    "numpy==2.4.3",
    "oauthlib==3.3.1",
    "orjson==3.11.7",
    "ormsgpack==1.12.2",
    "packaging==26.0",
    "pandas==2.3.3",
    "pillow==12.1.1",
    "pirate-garmin",
    "playwright>=1.58.0",
    "protobuf==6.33.6",
    "pyarrow==23.0.1",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydeck==0.9.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rpds-py==0.30.0",
    "six==1.17.0",
    "smmap==5.0.3",
    "sniffio==1.3.1",
    "sqlite-vec==0.1.7",
    "streamlit==1.55.0",
    "tabulate==0.10.0",
    "tenacity==9.1.4",
    "toml==0.10.2",
    "tornado==6.5.5",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "uvicorn==0.38.0",
    "uuid-utils==0.14.1",
    "websockets==16.0",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]

[tool.uv.sources]
pirate-garmin = { git = "https://github.com/jeffton/pirate-garmin.git" }
